--- a/date/2024-03/page-3.htm
+++ b/date/2024-03/page-3.htm
@@ -89,6 +89,23 @@
                                 <div class="row">
                     <div class="col-lg-4">
                         <div class="position-relative">
+                            <a href="/free-nodes/2024-3-9-free-high-speed-nodes.htm">
+                                <img src="https://clashnode.github.io/uploads/20240214/02304af5d6ae5c5ec3e37e4b96cee2ef.webp" alt="3月9日18.3M/S|SSR/Shadowrocket/V2ray/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 mt-lg-0 mt-5">
+                        <a href="/free-nodes/2024-3-9-free-high-speed-nodes.htm">
+                            <h3 class="title-big">3月9日18.3M/S|SSR/Shadowrocket/V2ray/Clash免费节点每天更新订阅链接</h3>
+                        </a>
+                        <p class="mt-4">这一次的节点更新覆盖了韩国、新加坡、加拿大、日本、欧洲、美国、香港等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        <p class="title-small mb-2 pull-right">
+                            3月9日                        </p>
+                    </div>
+                </div>
+                                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="position-relative">
                             <a href="/free-nodes/2024-3-8-free-v2ray.htm">
                                 <img src="https://clashnode.github.io/uploads/20240214/617a204e85c6866d8bf813a7b5c311bb.webp" alt="3月8日20.3M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
@@ -230,6 +247,16 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-3-29-free-clash-subscribe.htm">3月29日更新20.5M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、加拿大、日本、欧洲、美国、香港、韩国等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
                 <h4><a href="/free-nodes/2024-3-28-free-node-subscribe-links.htm">3月28日更新22.8M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点</a></h4>
                 <p>这一次的节点更新覆盖了新加坡、美国、加拿大、欧洲、香港、韩国、日本等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
@@ -316,23 +343,13 @@
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-19-clash-v2ray-ss-ssr.htm">3月19日19.1M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、日本、新加坡、香港、加拿大、韩国等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2024-03/" title="2024-03 归档">2024-03</a></h4>
+                                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-03/" title="2024-03 归档">2024-03</a></h4>
                                 <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-02/" title="2024-02 归档">2024-02</a></h4>
                             </div>
         </div>
